--- a/style.css
+++ b/style.css
@@ -7,11 +7,14 @@ body {
 
 .grid {
     display: grid;
-    grid-gap: 2px;
     padding: 4px;
     border: 1px solid gray;
 }
 
 .cell {
-    border: 1px solid black;
+    
+}
+
+.hover {
+
 }
