Add ability to change resolution

--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ body {
 }
 
 .header h1 {
-
+    font-size: 24px;
 }
 
-.res-input {
+.right {
     display: flex;
     align-items: center;
     gap: 16px;
