--- a/style.css
+++ b/style.css
@@ -40,13 +40,19 @@ body {
 
 .grid {
     display: grid;
+    gap: 1px;
     padding: 4px;
     border: 1px solid gray;
+    box-shadow: 5px 5px 10px gray;
+}
+
+.cell {
+    border-radius: 4px;
 }
 
 .footer {
     display: flex;
     justify-content: center;
-    padding: 16px;
+    padding: 8px;
     background: gray;
 }
